--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <div id="linkList" class="box">
                     <h2>リンク集</h2>
                     <dl>
-                        <dt><a href="" target="_blank">Twitter</a></dt>
+                        <dt><a href="https://twitter.com/itsumoonazicode" target="_blank">Twitter</a></dt>
                         <dd>つぶやき</dd>
-                        <dt><a href="" target="_blank">ブログ</a></dt>
+                        <dt><a href="https://konkon10knock.goat.me/" target="_blank">ブログ</a></dt>
                         <dd>ポエムの書き散らし</dd>
-                        <dt><a href="" target="_blank">ブクログ</a></dt>
+                        <dt><a href="https://booklog.jp/users/itsumoonazicode" target="_blank">ブクログ</a></dt>
                         <dd>思考の現れ</dd>
                     </dl>
                 </div>
