リンク集にダミー文章作成ツールを追加

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <header class="mainColor_base">
             <div id="siteTitle">
-                <h1>itsumoonazicode.com</h1>
+                <h1>itsumoonazicode.com</h1>                
                 <p>- じぶん置き場 -</p>
             </div>
         </header>
@@ -52,6 +52,8 @@
                         <dd>ポエムの書き散らし</dd>
                         <dt><a href="https://booklog.jp/users/itsumoonazicode" target="_blank">ブクログ</a></dt>
                         <dd>思考の現れ</dd>
+                        <dt><a href="https://itsumoonazicode.github.io/n/index.html" target="_blank">ダミー文章作成ツール</a></dt>
+                        <dd>自作です</dd>
                     </dl>
                 </div>
                 <div id="iCan" class="box">
